--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,16 @@ server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/skillre
 spring.datasource.username=root
-spring.datasource.password=rootpass
+spring.datasource.password= your db pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.security.oauth2.client.registration.google.clientId= 773253162522-lk8g7pahm9igv86felds4s2rgqdj58d1.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.clientSecret= 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
+spring.security.oauth2.client.registration.google.clientId= your client id
+spring.security.oauth2.client.registration.google.clientSecret= your secret
 spring.security.oauth2.client.registration.google.scope=email,profile
 
-spring.security.oauth2.client.registration.github.client-id= Iv1.4cecd40ed20d2b81
-spring.security.oauth2.client.registration.github.client-secret= a84e3edfcbce548df4d6b25ec08cafab39bab5d5
+spring.security.oauth2.client.registration.github.client-id= your client id
+spring.security.oauth2.client.registration.github.client-secret= your secret
 
 frontend.url= http://localhost:3001
 
