--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
+spring.config.import=file:src/main/resources/env.properties
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/skillre
 spring.datasource.username=root
-spring.datasource.password= your db pass
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.profiles.active=dev
 
-spring.security.oauth2.client.registration.google.clientId= your client id
-spring.security.oauth2.client.registration.google.clientSecret= your secret
+spring.security.oauth2.client.registration.google.clientId= ${G_CLIENT_ID}
+spring.security.oauth2.client.registration.google.clientSecret= ${G_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
-spring.security.oauth2.client.registration.github.client-id= your client id
-spring.security.oauth2.client.registration.github.client-secret= your secret
+spring.security.oauth2.client.registration.github.client-id= ${GIT_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret= ${GIT_CLIENT_SECRET}
 
-frontend.url= http://localhost:3001
+
+logging.level.org.springframework.web: DEBUG
 
